@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Generate NPC information page.
+ utils/mapper.c
+Nicolas Weeger 2008-05-08
+
 Better and more logical fix for bug #1936178: Trying to remove removed object causes server crash.
  random_maps/treasure.c: remove doors after door replacing.
 Nicolas Weeger 2008-05-08
